--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,17 +93,29 @@
                 <data android:scheme="tl-3a975ba3"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.TherapistLoginActivity" />
-        <activity android:name=".Activity.AthleteLoginActivity" />
-        <activity android:name=".Activity.AthleteSignupActivity" />
-        <activity android:name=".Activity.TherapistSignupActivity" />
-        <activity android:name=".Activity.MainActivity" />
+        <activity android:name=".Activity.TherapistLoginActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".Activity.AthleteLoginActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".Activity.AthleteSignupActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".Activity.TherapistSignupActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".Activity.TutorialActivity" />
+        <activity android:name=".Activity.TutorialActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity android:name=".Activity.CropImageActivity" />
 
         <service android:name="com.parse.PushService" />
